@@ -36,9 +36,16 @@
 
 #if _GLIBCXX_USE_C99_INTTYPES_TR1
 
-// For 8.11.1/1 (see C99, Note 184) 
-#define __STDC_FORMAT_MACROS
+// For 8.11.1/1 (see C99, Note 184)
+#ifndef __STDC_FORMAT_MACROS
+# define _UNDEF__STDC_FORMAT_MACROS
+# define __STDC_FORMAT_MACROS
+#endif
 #include_next <inttypes.h>
+#ifdef _UNDEF__STDC_FORMAT_MACROS
+# undef __STDC_FORMAT_MACROS
+# undef _UNDEF__STDC_FORMAT_MACROS
+#endif
 
 namespace std
 {
